# CVEssentials

./: .cproject  CMakeLists.txt  README.md  filter.h  grayscale.h  main.cpp
AppliedCV/: .cproject  .project
AppliedCV/Debug/: AppliedCV  makefile
AppliedCV/Debug/src/: subdir.mk
AppliedCV/src/: least_squares_2_1.h
Test/: .cproject
Test/src/: Image.h  PackData.h  Test.cpp
